Tested Sonar Qube. Resolved Major issues.